# fkst-hosted

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  README.md  package.json
backend/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  engine.ref
backend/deploy/k8s/: README.md  api-deployment.yaml  api-service.yaml  configmap.yaml  control-plane-deployment.yaml  kustomization.yaml  mongodb-service.yaml  mongodb-statefulset.yaml  pdb.yaml  secret.example.yaml  worker-configmap.yaml  worker-deployment.yaml
backend/fkst-control-plane/: Cargo.toml  Dockerfile
backend/fkst-control-plane/k8s_sample/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  mongodb-service.yaml  mongodb-statefulset.yaml  namespace.yaml  pdb.yaml  rbac.yaml  secret.example.yaml
backend/fkst-control-plane/src/: authz.rs  config.rs  db.rs  error.rs  journal_config.rs  lib.rs  main.rs  openapi.rs  router.rs  startup.rs  state.rs
backend/fkst-control-plane/src/auth/: identity.rs  middleware.rs  mod.rs
backend/fkst-control-plane/src/authz/: permissions.rs
backend/fkst-control-plane/src/controller/: claims.rs  claims_tests.rs  handle.rs  internal_auth.rs  internal_tests.rs  mod.rs  placement.rs  reassign.rs  reassign_tests.rs  registry.rs  token_minter.rs
backend/fkst-control-plane/src/distribution/: config.rs  distributor.rs
backend/fkst-control-plane/src/engine/: adopt.rs  clone.rs  config.rs  goal_token.rs  logs.rs  materialize.rs  mod.rs  process.rs  runner.rs  util.rs
backend/fkst-control-plane/src/github_app/: api.rs  config.rs  contents.rs  mod.rs
backend/fkst-control-plane/src/github_hub/: contents.rs  contents_tests.rs  fanout.rs  mod.rs  service.rs  types.rs
backend/fkst-control-plane/src/goals/: issue_parse.rs  issue_store.rs  marker.rs  mod.rs  model.rs  preflight.rs  preflight_ornn.rs  preflight_ornn_tests.rs  preflight_tests.rs  repo.rs  repo_create.rs  repo_create_classify.rs
backend/fkst-control-plane/src/journal/: activity.rs  comments.rs  config.rs  flush.rs  flush_bootstrap_tests.rs  flush_mech_tests.rs  github.rs  github_http.rs  keys.rs  merge.rs  mod.rs  model.rs  signals.rs  test_support.rs
backend/fkst-control-plane/tests/: activation_dispatch.rs  admin_metrics.rs  auth_api.rs  claim_placement.rs  distribution.rs  e2e_happy_path.rs  engine_runner.rs  git_credential_helper.rs  github_app_installations.rs  github_hub.rs  goal_session_token.rs  goals_api.rs  goals_submit_api.rs  health.rs  internal_protocol.rs  journal.rs  openapi.rs  persistence.rs  pool_lease.rs  reassign_redispatch.rs  reconcile.rs  sessions_api.rs  vault.rs
backend/fkst-engine/: Cargo.toml
backend/fkst-engine/src/: adopt.rs  breadcrumb.rs  clone.rs  config.rs  error.rs  git-credential-fkst.sh  goal_token.rs  lib.rs  logs.rs  materialize.rs  process.rs  runner.rs  runtime.rs  skills.rs
backend/fkst-hosted-api/: Cargo.toml
backend/fkst-hosted-api/src/: authz.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  router.rs  state.rs
backend/fkst-hosted-api/tests/: auth_api.rs  authz_api.rs  distribution.rs  e2e_happy_path.rs  engine_runner.rs  git_credential_helper.rs  github_app_installations.rs  github_hub.rs  goal_session_token.rs  goals_api.rs  health.rs  journal.rs  nyxid_session_token.rs  package_shares.rs  packages_api.rs  packages_archive.rs  packages_generate.rs  packages_repo.rs  persistence.rs  pool_lease.rs  reconcile.rs  sessions_api.rs  vault.rs
backend/fkst-journal/: Cargo.toml
backend/fkst-journal/src/: activity.rs  comments.rs  config.rs  flush.rs  flush_bootstrap_tests.rs  flush_mech_tests.rs  github.rs  github_http.rs  keys.rs  lib.rs  merge.rs  model.rs  signals.rs  test_support.rs
backend/fkst-shared/: Cargo.toml
backend/fkst-shared/src/: lib.rs
backend/fkst-worker/: Cargo.toml  Dockerfile
backend/fkst-worker/k8s_sample/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  secret.example.yaml
backend/fkst-worker/src/: agent.rs  agent_lifecycle.rs  agent_sessions.rs  agent_tests.rs  config.rs  drain.rs  drain_tests.rs  lib.rs  main.rs  run.rs  server.rs
backend/k8s_sample/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  secret.example.yaml  service.yaml
backend/src/: authz.rs  config.rs  env_config.rs  error.rs  github_identity.rs  lib.rs  main.rs  openapi.rs  reconcile_config.rs  reserved_env.rs  router.rs  state.rs
backend/src/auth/: middleware.rs
backend/src/engine/: breadcrumb.rs  config.rs  mod.rs  process.rs  runtime.rs
backend/src/github_app/: contents.rs  jwt.rs  listing.rs  listing_tests.rs  mod.rs
backend/src/goals/: issue_parse.rs  labels.rs  mod.rs  package_ref.rs  section_parse.rs  trigger_parse.rs  trigger_parse_tests.rs
backend/src/install/: mod.rs  tests.rs
backend/src/k8s/: env_store.rs  env_store_meta.rs  env_store_tests.rs  env_validator.rs  env_validator_pod.rs  env_validator_tests.rs  isolation.rs  launcher.rs  launcher_tests.rs  mod.rs  session_launcher.rs  session_launcher_tests.rs  token_rotation.rs  user_store.rs  watch.rs
backend/src/models/: mod.rs
backend/src/nyxid_connect/: mod.rs
backend/src/ornn/: client_tests.rs
backend/src/protocol/: types.rs
backend/src/reconcile/: desired.rs  desired_hash_tests.rs  desired_plan_tests.rs  desired_test_fixtures.rs  execute.rs  execute_tests.rs  loops.rs  mod.rs  pending.rs  pending_tests.rs  reachability.rs  reachability_tests.rs  registry.rs  registry_tests.rs  repo.rs  repo_tests.rs
backend/src/routes/: environments.rs  environments_tests.rs  health.rs  metrics.rs  mod.rs  session_ops.rs  sessions.rs  user_env.rs
backend/src/runner/: creds.rs  env_setup.rs  log.rs  log_task.rs  mod.rs  tests.rs
backend/src/session_pod/: codex.rs  creds_helper.rs  driver.rs  gh-shim.sh  git-credential-fkst.sh  mod.rs  plan.rs  plan_tests.rs
backend/src/session_spec/: creds.rs  mod.rs  spec.rs
backend/src/sessions/: mod.rs
backend/tests/: health.rs  openapi.rs
backend/tests/support/: mod.rs
(+483 files in other folders)
