[package]
name = "fkst-control-plane"
version.workspace = true
edition.workspace = true

[dependencies]
# Role-neutral models + transport clients shared with the worker (issue #145).
fkst-shared = { path = "../fkst-shared" }
async-trait = "0.1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "process", "time", "sync", "io-util", "fs"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "request-id", "util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
# Webhook signature verification (issue #108): HMAC-SHA256 over the raw GitHub
# webhook body, constant-time compared against `X-Hub-Signature-256`. `hmac`
# pairs with the already-present `sha2` (no GitHub SDK — consistent with the
# hand-rolled `reqwest` + `jsonwebtoken` GitHub App transport).
hmac = "0.12"
mongodb = "3"
bson = "2"
regex = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
envy = "0.4"
tempfile = "3"
nix = { version = "0.29", features = ["signal", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.10"
jsonwebtoken = "9"
once_cell = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Vault envelope encryption (issue #100): AES-256-GCM AEAD over per-secret DEKs
# wrapped by a KEK. `aes-gcm` re-exports the `aead` traits, so no separate
# `aead` dep is needed. `zeroize` wipes DEK/plaintext buffers; `rand` (0.8, the
# version `aes-gcm` 0.10 depends on) sources cryptographic randomness for the
# per-secret DEK and nonce.
aes-gcm = "0.10"
zeroize = "1"
rand = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mongo"] }
wiremock = "0.6"
filetime = "0.2"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
