[package]
name = "fkst-control-plane"
version.workspace = true
edition.workspace = true

[dependencies]
# Role-neutral models + transport clients shared with the worker (issue #145).
# The `schema` feature pulls in the optional `utoipa::ToSchema` derives on the
# shared wire types so they appear, full-fidelity, in the generated OpenAPI spec
# served at /openapi.json. The worker links fkst-shared WITHOUT this feature, so
# it stays free of utoipa.
fkst-shared = { path = "../fkst-shared", features = ["schema"] }
# The engine integration (the session runner), extracted from this crate so the
# worker can drive it too (issue #151). `crate::engine` is now a re-export of
# this crate; links neither `mongodb` nor `axum`.
fkst-engine = { path = "../fkst-engine" }
# Session-progress journaling, extracted so BOTH the control-plane and the worker
# can journal RAISED events direct to GitHub (issue #151). `crate::journal` is now
# a re-export of this crate; links neither `mongodb` nor `axum`.
fkst-journal = { path = "../fkst-journal" }
async-trait = "0.1"
axum = "0.7"
# Runtime OpenAPI 3 generation for the public HTTP surface, served at
# /openapi.json (no static spec; the live route table IS the spec). `utoipa`
# carries the `#[utoipa::path]`/`ToSchema`/`IntoParams` derives; `utoipa-axum`'s
# `OpenApiRouter` collects paths+schemas from the routes as they are registered,
# so the documented path and the axum route are one and the same. `utoipa-axum`
# 0.1 targets axum 0.7 (0.2+ moved to axum 0.8); both track utoipa 5.
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "process", "time", "sync", "io-util", "fs"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "request-id", "util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
# Webhook signature verification (issue #108): HMAC-SHA256 over the raw GitHub
# webhook body, constant-time compared against `X-Hub-Signature-256`. `hmac`
# pairs with the already-present `sha2` (no GitHub SDK — consistent with the
# hand-rolled `reqwest` + `jsonwebtoken` GitHub App transport).
hmac = "0.12"
# `bson` is a standalone crate (NOT the mongodb driver, removed in #143). It is
# kept for `SessionDoc`'s value types (`bson::Uuid` / `bson::DateTime`) and the
# in-memory `SessionRepo` CAS round-trip (`bson::to_document`).
bson = "2"
regex = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
envy = "0.4"
tempfile = "3"
nix = { version = "0.29", features = ["signal", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.10"
jsonwebtoken = "9"
once_cell = "1"
# `rand` (0.8) sources cryptographic randomness for the GitHub App JWT/runtime
# nonces. (Vault at-rest envelope encryption was removed in the DB-free pivot
# (#138): secrets are in-memory `SecretString`s reaching the worker over the TLS
# controller↔worker channel, so `aes-gcm`/`zeroize` are no longer needed.)
rand = "0.8"

[dev-dependencies]
# The worker crate is a dev-dependency ONLY (the internal-protocol integration
# test drives a real WorkerAgent against the controller's internal_router). The
# non-test dependency graph never points control-plane -> worker, and worker
# never points at control-plane, so the compiler-enforced boundary holds.
fkst-worker = { path = "../fkst-worker" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# `zip` is only used now to BUILD test skill packages in the ornn module's
# `#[cfg(test)]` suite — the install implementation that consumed it moved to
# `fkst-engine` (#151). It is therefore a dev-dependency, not a runtime one.
zip = { version = "2", default-features = false, features = ["deflate"] }
wiremock = "0.6"
filetime = "0.2"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
