[package]
name = "fkst-control-plane"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
axum = "0.7"
# Runtime OpenAPI 3 generation for the public HTTP surface, served at
# /openapi.json (no static spec; the live route table IS the spec). `utoipa`
# carries the `#[utoipa::path]`/`ToSchema`/`IntoParams` derives; `utoipa-axum`'s
# `OpenApiRouter` collects paths+schemas from the routes as they are registered,
# so the documented path and the axum route are one and the same. `utoipa-axum`
# 0.1 targets axum 0.7 (0.2+ moved to axum 0.8); both track utoipa 5.
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "process", "time", "sync", "io-util", "fs"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "request-id", "util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
# Webhook signature verification (issue #108): HMAC-SHA256 over the raw GitHub
# webhook body, constant-time compared against `X-Hub-Signature-256`. `hmac`
# pairs with the already-present `sha2` (no GitHub SDK — consistent with the
# hand-rolled `reqwest` + `jsonwebtoken` GitHub App transport).
hmac = "0.12"
# `bson` is a standalone crate (NOT the mongodb driver, removed in #143). It is
# kept for `SessionDoc`'s value types (`bson::Uuid` / `bson::DateTime`) and the
# in-memory `SessionRepo` CAS round-trip (`bson::to_document`).
bson = "2"
regex = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
envy = "0.4"
tempfile = "3"
nix = { version = "0.29", features = ["signal", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.10"
jsonwebtoken = "9"
once_cell = "1"
# `rand` (0.8) sources cryptographic randomness for the GitHub App JWT/runtime
# nonces. (Vault at-rest envelope encryption was removed in the DB-free pivot
# (#138): secrets are in-memory `SecretString`s reaching the worker over the TLS
# controller↔worker channel, so `aes-gcm`/`zeroize` are no longer needed.)
rand = "0.8"
# Deterministic per-session ids (UUIDv5 over installation+repo+issue) so a
# webhook redelivery maps to the same session/Job (at-most-one-Job idempotency).
uuid = { version = "1", features = ["v5"] }
# Kubernetes client for spawning one Job per substrate session (milestone #9).
# rustls (no openssl), matching the reqwest rustls-tls stack.
kube = { version = "0.96", default-features = false, features = ["client", "config", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["latest"] }
# `zip` unpacks Ornn skill packages into the per-session CODEX_HOME (engine).
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6"
filetime = "0.2"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
