# fkst-worker: the worker deployable of the control-plane/worker split.
#
# It connects UP to the controller over CONTROLLER_URL, self-registers, then
# heartbeats + pulls work (the pull loop is a no-op until #135 grants claim
# authority). It deliberately does NOT depend on the `mongodb` driver nor on
# `fkst-control-plane`: those omissions are the compiler-enforced boundary that
# guarantees the worker never reaches the database or the control-plane's
# privileged state. (`cargo tree -p fkst-worker` must show neither.)
[package]
name = "fkst-worker"
version.workspace = true
edition.workspace = true

[lib]
name = "fkst_worker"

[[bin]]
name = "fkst-worker"
path = "src/main.rs"

[dependencies]
# The role-neutral wire types (the internal protocol) — the only shared code
# the worker links. fkst-shared pulls `bson` but NOT the `mongodb` driver, so
# the worker stays database-free.
fkst-shared = { path = "../fkst-shared" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The worker-local HTTP server (GET /health) so k8s can liveness-probe it.
axum = "0.7"
# The registry client (register / heartbeat / pull / drain) over the internal
# protocol. rustls so no system OpenSSL is needed in the slim runtime.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.10"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
